--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node src/app.js"
   },
   "author": "Atharva",
   "license": "ISC",
-  "description": "",
+  "description": "A weather app built using Node.js, Express, and Handlebars",
   "dependencies": {
     "express": "^4.21.0",
     "hbs": "^4.2.0"
